--- a/package.json
+++ b/package.json
@@ -21,6 +21,71 @@
     "react-dom": "^18.3.0",
     "@prisma/client": "^5.10.0",
     "@tanstack/react-query": "^5.28.0",
+    "@vercel/blob": "^0.23.0",
+    "zustand": "^4.5.0",
+    "stripe": "^14.18.0",
+    "@stripe/stripe-js": "^3.0.0",
+    "@stripe/react-stripe-js": "^2.5.0",
+    "jose": "^5.2.0",
+    "bcryptjs": "^2.4.3",
+    "zod": "^3.22.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
+    "lucide-react": "^0.350.0",
+    "date-fns": "^3.3.0",
+    "resend": "^3.2.0",
+    "twilio": "^4.23.0",
+    "nanoid": "^5.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "react-hook-form": "^7.50.0",
+    "@hookform/resolvers": "^3.3.0",
+    "sharp": "^0.33.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.0",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/bcryptjs": "^2.4.6",
+    "prisma": "^5.10.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.2.0",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.0",
+    "@playwright/test": "^1.42.0"
+  }
+}{
+  "name": "productlobby",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "test": "jest",
+    "test:e2e": "playwright test"
+  },
+  "dependencies": {
+    "next": "14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "@prisma/client": "^5.10.0",
+    "@tanstack/react-query": "^5.28.0",
     "zustand": "^4.5.0",
     "stripe": "^14.18.0",
     "@stripe/stripe-js": "^3.0.0",
